# ffmpeg_example

./: README.MD
muxing/: CMakeLists.txt  main.cpp
